plugins {
    id 'java'
    id 'java-library'
    id 'idea'
}

idea {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

group 'ru.otus'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

configurations.all {
    java {
        sourceCompatibility = JavaVersion.VERSION_14
        targetCompatibility = JavaVersion.VERSION_14
    }
}

dependencies {
    implementation group: 'org.springframework', name: 'spring-context', version: '5.2.8.RELEASE'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
}

test {
    useJUnitPlatform()
}

sourceSets {
    main.java.srcDir 'src/main/ru/otus'
}

task run(type: JavaExec, dependsOn: classes) {
    main = 'ru.otus.Main'
    classpath sourceSets.main.runtimeClasspath
}